<resources>
    <string name="app_name">imd-calculadora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appTitle">Calculadora IMD</string>
    <string name="calculadoraButton">Calculadora</string>
    <string name="notasButton">Notas</string>
    <string name="footer">Feito por Daniel Luan Lourenço ☕</string>
    <!-- fragment-calculadora-strings -->
    <string name="calc_fragmentTitle">Calculadora</string>
    <string name="calc_result">Resultado:</string>
    <string name="calc_one">1</string>
    <string name="calc_two">2</string>
    <string name="calc_three">3</string>
    <string name="calc_four">4</string>
    <string name="calc_five">5</string>
    <string name="calc_six">6</string>
    <string name="calc_seven">7</string>
    <string name="calc_eight">8</string>
    <string name="calc_nine">9</string>
    <string name="calc_zero">0</string>
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>
    <string name="calc_multiply">*</string>
    <string name="calc_divide">/</string>
    <string name="calc_delete">DEL</string>
    <string name="calc_dot">.</string>
    <string name="calc_equals">=</string>

    <!-- fragment-notas-strings -->
    <string name="notas_fragmentTitle">Calcule sua média</string>
    <string name="notas_numberField1">Insira a nota da unidade 1</string>
    <string name="notas_numberField2">Insira a nota da unidade 2</string>
    <string name="notas_numberField3">Insira a nota da unidade 3</string>
    <string name="notas_buttonCalcular">Calcular</string>
    <string name="notas_situacao">Situação:</string>
</resources>