<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculadoraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="165dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNumbersCalc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:ems="10"
            android:includeFontPadding="false"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNumbersCalc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:textColor="#686868"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDelete"
                android:layout_width="260dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_delete"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_divide"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_seven"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_eight"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_nine"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_multiply"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_four"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_five"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_six"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_minus"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_one"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_two"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_three"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_plus"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"

            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="260dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_zero"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:shadowColor="@color/lightBlue"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/calc_equals"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>